# anonymize

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .oxfmtrc.json  .prettierignore  AGENTS.md  Cargo.toml  NOTICE  README.md  bunfig.toml  cliff.toml  clippy.toml  deny.toml  dylint.toml  eval-html.ts  knip.json  lefthook.yml  oxlint.config.ts  oxlint.plugin.ts  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json  turbo.json
.ai/: manifest.json
crates/anonymize-adapter-contract/: Cargo.toml
crates/anonymize-adapter-contract/examples/: native_adapter_parity.rs  native_adapter_perf.rs
crates/anonymize-adapter-contract/src/: assemble.rs  caller.rs  config.rs  error.rs  external_detection.rs  lib.rs  names.rs  offsets.rs  results.rs  types.rs
crates/anonymize-adapter-contract/src/assemble/: address.rs  coreference.rs  country.rs  dates.rs  deny_list.rs  gazetteer.rs  hotwords.rs  js.rs  language.rs  legal_forms.rs  mod.rs  monetary.rs  names.rs  native-regex-table.json  regex.rs  search_pattern.rs  signature.rs  trigger.rs  zones.rs
crates/anonymize-adapter-contract/src/package/: digest.rs  format.rs  mod.rs  timing.rs  version.rs  wire.rs
crates/anonymize-adapter-contract/tests/: assemble_dictionaries.rs  contact_recall.rs
crates/anonymize-adapter-contract/tests/fixtures/: external-detection-batch-v1.json
crates/anonymize-core/: Cargo.toml  README.md  build.rs
crates/anonymize-core/data/: address-final-abbrevs.txt  identifier-cues.txt  legal-period-suffixes.txt
crates/anonymize-core/src/: address_context.rs  address_seeds.rs  anchored.rs  artifact_bytes.rs  bounded_regex.rs  byte_offsets.rs  coreference.rs  dates.rs  diagnostics.rs  exec.rs  false_positives.rs  hotwords.rs  labels.rs  legal_forms.rs  lib.rs  money.rs  name_corpus.rs  normalize.rs  placeholders.rs  prepared.rs  processors.rs  redact.rs  resolution.rs  search.rs  session.rs  session_archive.rs  signatures.rs  triggers.rs  types.rs  utf16.rs  validators.rs  zones.rs
crates/anonymize-core/src/assemble/: config.rs  data.rs  dictionaries.rs  error.rs  gazetteer.rs  mod.rs
crates/anonymize-core/src/name_corpus/: cjk.rs
crates/anonymize-core/src/prepared/: artifacts.rs  config.rs  config_validation.rs  detection_phase.rs  detector_contract.rs  detector_registry.rs  diagnostic_stream.rs  engine_state.rs  entity_filter.rs  index_builder.rs  index_patterns.rs  index_prepare.rs  phase.rs  prepare_phase.rs  redaction_phase.rs  resolution_phase.rs  result_stream.rs  results.rs  search_matcher.rs  search_phase.rs  support_prepare.rs  support_resources.rs  support_slots.rs  timing.rs
crates/anonymize-core/src/prepared/detectors/: address_seed.rs  anchored.rs  legal_form.rs  literal.rs  mod.rs  name_corpus.rs  prelude.rs  regex.rs  signature.rs  trigger.rs
crates/anonymize-core/src/prepared/snapshots/: stella_anonymize_core__prepared__support_resources__tests__support_resources.snap
crates/anonymize-core/src/resolution/: boundary.rs  common.rs  merge.rs  mod.rs  sanitize.rs  types.rs
crates/anonymize-core/tests/: address_seed_parity.rs  assemble_digest.rs  assemble_parity.rs  assemble_regenerate.rs  builders.rs  determinism.rs  diagnostics.rs  false_positive_parity.rs  normalize.rs  prepared.rs  primitives_properties.rs  processors.rs  redaction.rs  resolution.rs  search.rs  session.rs  session_archive.rs  trigger_parity.rs
crates/anonymize-core/tests/fixtures/assemble/: README.md  baseline-all-on.expected.json  baseline-all-on.input.json  confidence-boost-off.expected.json  confidence-boost-off.input.json  custom-deny-boundary-override.expected.json  custom-deny-boundary-override.input.json  custom-deny-non-override.expected.json  custom-deny-non-override.input.json  custom-regex-basic.expected.json  custom-regex-basic.input.json  custom-regex-disabled.expected.json  custom-regex-disabled.input.json  custom-regex-hotword-reclassify.expected.json  custom-regex-hotword-reclassify.input.json  custom-regex-label-filtered.expected.json  custom-regex-label-filtered.input.json  custom-regex-prepared-include.expected.json  custom-regex-prepared-include.input.json  custom-regex-prepared-omit.expected.json  custom-regex-prepared-omit.input.json  gazetteer-fuzzy.expected.json  gazetteer-fuzzy.input.json  isolate-enableCoreference.expected.json  isolate-enableCoreference.input.json  isolate-enableCountries.expected.json  isolate-enableCountries.input.json  isolate-enableDenyList.expected.json  isolate-enableDenyList.input.json  isolate-enableGazetteer.expected.json  isolate-enableGazetteer.input.json  isolate-enableLegalForms.expected.json  isolate-enableLegalForms.input.json  isolate-enableNameCorpus.expected.json  isolate-enableNameCorpus.input.json  isolate-enableRegex.expected.json  isolate-enableRegex.input.json  isolate-enableTriggerPhrases.expected.json  isolate-enableTriggerPhrases.input.json  labels-and-threshold.expected.json  (+42 more)
crates/anonymize-core/tests/snapshots/: diagnostics__static_redaction_diagnostics.snap  redaction__coreference_alias_redaction.snap  redaction__placeholder_collision_redaction.snap
crates/anonymize-core/tests/support/: mod.rs  snapshots.rs
crates/anonymize-docx-core/: Cargo.toml  README.md
crates/anonymize-docx-core/src/: lib.rs
crates/anonymize-docx-core/tests/: extract.rs  rewrite.rs
crates/anonymize-napi/: Cargo.toml  napi.json
crates/anonymize-napi/src/: lib.rs
crates/anonymize-pdf-core/: Cargo.toml  README.md
crates/anonymize-pdf-core/src/: lib.rs  raster.rs
crates/anonymize-pdf-core/tests/fixtures/: encrypted.pdf.b64  generate.py  minimal-text-observation.json
crates/anonymize-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/anonymize-py/python/stella_anonymize/: ATTRIBUTION.md  __init__.py  __init__.pyi  _native.pyi  docx.py  pdf.py
crates/anonymize-py/src/: lib.rs
crates/anonymize-py/typecheck/: sdk_usage.py
crates/gliner2-server/: Cargo.toml
crates/gliner2-server/src/: engine.rs  health.rs  infer.rs  main.rs  types.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: artifact_decode.rs  normalize_text.rs
(+133 files in other folders)
