[package]
name = "stella-anonymize-adapter-contract"
version.workspace = true
edition.workspace = true
description = "Shared adapter contract for Stella anonymization bindings"
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
stella-anonymize-core = { path = "../anonymize-core" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
