[package]
name = "stella-anonymize-adapter-contract"
version.workspace = true
edition.workspace = true
description = "Shared adapter contract for Stella anonymization bindings"
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bincode = { version = "2", features = ["serde"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
stella-anonymize-core = { path = "../anonymize-core" }
zstd = "0.13"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
