[package]
name = "stella-anonymize-adapter-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared adapter contract for stella anonymization bindings"
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["zstd"]
# zstd read support. Off for wasm targets: the zstd C library does not
# cross-compile there, and the write path emits lz4 regardless.
zstd = ["dep:zstd"]

[dependencies]
blake3 = "1"
lz4_flex = { version = "0.13.1", default-features = false, features = [
  "safe-decode",
  "safe-encode",
  "std",
] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
stella-anonymize-core = { path = "../anonymize-core" }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
