[package]
name = "stella-anonymize-core"
version.workspace = true
edition.workspace = true
description = "Core anonymization semantics"
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords = ["anonymization", "pii", "redaction", "text"]
categories = ["text-processing"]

[dependencies]
bon = "3.9.3"
fancy-regex = "0.18"
regex = "1"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.15.2", features = [
  "serde",
  "const_generics",
  "union",
] }
serde_json = "1"
stella-stdnum-core = { version = "2.1.1", git = "https://github.com/stella/stdnum", rev = "2f3c3f107e3976ac059cc438d77916a592595d59" }
stella-text-search-core = { version = "1.0.6", git = "https://github.com/stella/text-search", rev = "d4562c43a6f3109f7a4077ba2a8926c89f4f1e8e" }

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
proptest = "1"
# Dev-only edge for the assemble parity test: the assembler returns the
# contract-owned BindingPreparedSearchConfig, so the test drives it from here.
# Cargo permits this cycle because the contract -> core edge is a normal
# dependency and this reverse edge is dev-only.
stella-anonymize-adapter-contract = { path = "../anonymize-adapter-contract" }

[lints]
workspace = true
