[package]
name = "stella-anonymize-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core anonymization semantics"
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords = ["anonymization", "pii", "redaction", "text"]
categories = ["text-processing"]

[dependencies]
bon = "3.9.3"
chacha20poly1305 = { version = "0.11", default-features = false, features = [
  "alloc",
  "zeroize",
] }
fancy-regex = "0.18"
getrandom = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.15.2", features = [
  "serde",
  "const_generics",
  "union",
] }
serde_json = "1"
stella-stdnum-core = { version = "2.1.1", git = "https://github.com/stella/stdnum", rev = "2f3c3f107e3976ac059cc438d77916a592595d59" }
stella-text-search-core = { version = "1.0.6", git = "https://github.com/stella/text-search", rev = "d4562c43a6f3109f7a4077ba2a8926c89f4f1e8e" }
unicode-segmentation = "1.13.3"
zeroize = "1.9"

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
proptest = "1"
# Dev-only edge for the assemble parity test: the assembler returns the
# contract-owned BindingPreparedSearchConfig, so the test drives it from here.
# Cargo permits this cycle because the contract -> core edge is a normal
# dependency and this reverse edge is dev-only.
stella-anonymize-adapter-contract = { path = "../anonymize-adapter-contract" }
# Dev-only: tests hash package bytes with established SHA-256 contracts.
sha2 = "0.11"

[lints]
workspace = true
