[package]
name = "stella-anonymize-py"
version.workspace = true
edition.workspace = true
description = "Python bindings for Stella anonymization core"
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "stella_anonymize_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stella-anonymize-core = { path = "../anonymize-core" }

[lints]
workspace = true
