[package]
name = "stella-anonymize-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for stella anonymization core"
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "stella_anonymize_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
serde_json = "1"
stella-anonymize-adapter-contract = { path = "../anonymize-adapter-contract" }
stella-anonymize-core = { path = "../anonymize-core" }

[build-dependencies]
pyo3-build-config = { version = "0.29", features = ["extension-module"] }

[lints]
workspace = true
