[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "stella-anonymize-core"
dynamic = ["version"]
description = "Python bindings for stella anonymization core"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "stella_anonymize._native"
python-source = "python"
include = [
  { path = "python/stella_anonymize/ATTRIBUTION.md", format = "wheel" },
  { path = "python/stella_anonymize/native_packages/*.stlanonpkg", format = "wheel" },
]
